Fix row collapse propagation.

--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -62,7 +62,7 @@
     @include flex-direction(row-reverse);
   }
   &-collapse{
-    .column, .columns{
+    > .column,> .columns{
       padding-left: 0;
       padding-right: 0;
     }
